--- a/AnimalCare/Views/Shared/_Layout.cshtml
+++ b/AnimalCare/Views/Shared/_Layout.cshtml
@@ -164,36 +164,33 @@
                     {
                         var currentUser = await UserManager.GetUserAsync(User);
 
-                        <li class="nav-item d-flex align-items-center text-white fw-semibold me-3">
-                            <i class="bi bi-person-circle me-1"></i>
-                            @(currentUser?.FirstName) @(currentUser?.LastName)
-                        </li>
-
-                        <li class="nav-item">
-                            <form asp-area="Identity" asp-page="/Account/Logout"
-                                  asp-route-returnUrl="@Url.Action("Index", "Home")"
-                                  method="post">
-                                <button class="btn btn-light btn-sm">
-                                    <i class="bi bi-box-arrow-right"></i> Logout
-                                </button>
-                            </form>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white fw-semibold d-flex gap-2 align-items-center"
+                               href="#" role="button" data-bs-toggle="dropdown">
+                                <i class="bi bi-person-circle"></i>
+                                @(currentUser?.FirstName) @(currentUser?.LastName)
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li>
+                                    <a class="dropdown-item d-flex gap-2 align-items-center"
+                                       asp-controller="Account" asp-action="Profile">
+                                        <i class="bi bi-person"></i> My Profile
+                                    </a>
+                                </li>
+                                
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <form asp-area="Identity" asp-page="/Account/Logout"
+                                          asp-route-returnUrl="@Url.Action("Index", "Home")"
+                                          method="post">
+                                        <button type="submit" class="dropdown-item d-flex gap-2 align-items-center">
+                                            <i class="bi bi-box-arrow-right"></i> Logout
+                                        </button>
+                                    </form>
+                                </li>
+                            </ul>
                         </li>
                     }
-                    else
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">
-                                <i class="bi bi-door-open"></i> Login
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">
-                                <i class="bi bi-pencil-square"></i> Register
-                            </a>
-                        </li>
-                    }
-                </ul>
             </div>
         </div>
     </nav>
